[tool.poetry]
name = "pyintervals"
version = "1.6.0"
description = "Efficient interval operations."
authors = ["Serkan Kalay <serkanosmankalay@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.rst"
packages = [
    {include = "pyintervals", from = "src"},
    {include = "pyintervals/py.typed", from = "src"}
]
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/serkankalay/pyintervals"
keywords = [
    "interval",
    "timespan",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}
sortedcontainers = "^2.4.0"
sortedcontainers-stubs = "^2.4.2"
twine = "^6.2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.1,<9.0.0"
pytest-cov = ">=4,<6"
pytest-benchmark = "^4.0.0"

[tool.poetry.group.typecheck.dependencies]
mypy = ">=0.982,<1.11"

[tool.poetry.group.linting.dependencies]
black = ">=22.10,<25.0"
flake8 = ">=5.0.4,<7.0.0"
isort = "^5.7.0"

[tool.poetry.group.dev.dependencies]
tox = ">=3.26,<5.0"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
\.eggs
| \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| build
| dist
)/
'''

[tool.isort]
line_length = 120
profile = 'black'
add_imports = ['from __future__ import annotations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
